--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -5,7 +5,7 @@
     width: 32%;
 }
 .fourth{
-    width: 25%;
+    width: 23%;
 }
 .projects-img,
 .news-article{
@@ -14,26 +14,68 @@
     justify-content: space-between;
 }
 .about-us{
-    margin: 50px;
+    margin: 50px 0;
+    background: url(../images/icons/Ellipse-left.png) no-repeat;
+    background-size: 157px;
+    h3{
+        margin-bottom: 25px;
+    }
     .about-us-stuff{
         @extend .flex;
+        align-items: flex-start;
     }
     .co-description{
-        flex-basis: 70%;
+        flex-basis: 62%;
+        button{
+            margin-top:100px;
+        }
     }
     .free-consult{
         background: $bg-color;
-        border-right: 1px solid $primary;
-        flex-basis: 20%;
-        padding: 20px;
+        border-right: 1px solid transparent;
+        flex-basis: 25%;
+        padding: 30px;
+        position: relative;
+        p{
+            margin-bottom: 10px;
+        }
         button{
             @extend .transparent;
+            margin: 20px 0;
+            transition: all 0.5s ease-in-out;
+        }
+        h3{
+            transition: all 0.5s ease-in-out;  
+        }
+        &:hover h3{
+            color: $primary;
+        }
+        &:hover button{
+            outline: 2px solid $primary;
+        }
+        &:after{
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 2px;
+            height: 0;
+            background: transparent;
+            transition: all 0.5s ease;
+        }
+        &:hover:after{
+            width: 2px;
+            height:100%;
+            background: $primary;
         }
     }
 }
 .services{
-    background: $bg_color;
-    padding: 50px 0;
+    background: $bg_color url(../images/icons/Ellipse-right.png) no-repeat;
+    background-position: bottom right;
+    background-size: 157px;
+    padding: 100px 0;
     .third{
         background: white;
         padding: 30px;
@@ -41,9 +83,14 @@
     }
 }
 .services-title{
+    @extend .title-flourish;
     padding: 15px;
     h3, h2{
-        text-align: center;
+        z-index: 2;
+    }
+    h6{
+        z-index: 1;
+        color: white;
     }
 }
 .services{
@@ -61,31 +108,75 @@
     margin: 50px;
     .rational-script{
         @extend .flex;
+        align-items: flex-start;
+        margin-bottom: 50px;
+        .rationals-content{
+            flex-basis: 50%;
+        }
+        .rationals-image{
+            flex-basis: 45%;
+        }
     }
     .rationals{
         @extend .flex;
         .third{
-            border: 1px solid grey;
+            border: 1px solid $bg-color;
+            padding: 30px;
+            min-height: 170px;
+            transition: all 0.5s ease-in-out;
+            position: relative;
+            &:before{
+                content: '';
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 2px;
+                height: 0;
+                background: transparent;
+                transition: all 0.5s ease;
+            }
+            &:hover:before{
+                width: 2px;
+                height:100%;
+                background: $primary;
+            }
+            &:hover h5{
+                color: $primary;
+            }
+        }
+        .rational-title{
+           @extend .flex;
+           justify-content: space-around;
+        }
+        .rational-title h5{
+            flex-basis: 80%;
         }
     }
 }
 .credentials{
-    @extend .flex;
-    justify-content: space-around;
     background: $block;
     margin: 30px 0;
+    .outer-wrapper{
+        @extend .flex;
+        justify-content: space-around; 
+    }
     .fourth{
-        color: white;
+        padding: 50px;
+        &:not(:last-child){
+            border-right: 1px solid $primary;
+        }
     }
 }
 .projects{
+    margin: 100px 0;
     .projects-title{
-        h2,h3{
-            text-align:center;
-        }
+        @extend .title-flourish;
+        position: relative;
     }
     .projects-detail{
         @extend .flex;
+        margin: 30px 0;
     }
 }
 .statement{ 
@@ -97,17 +188,15 @@
             flex-basis: 35%;
         } 
         .vp-statement{
-            text-align: center;
             flex-basis: 60%;
         }     
     }
 }
-
 .news{
+    margin: 100px 0;
     .news-title{
-        h2,h3{
-            text-align: center;
-        }
+        @extend .title-flourish;
+        position: relative;
     }
     .news-details{
         @extend .flex;
