--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,9 +7,10 @@ $bg-color: #f5f5f5; //Offwhite
 //TEXT
 $font-color: #272626; //Black
 $p-color: #747474; //DarkGrey
+$text-design: #f6f3f3; //light light grey
 $serif-heading: PlayfairDisplay;
 $sans-highlights: Poppins;
-$sans-p:Source Sans Pro;
+$sans-text:Source Sans Pro;
 
 .flex{
     display: flex;
@@ -18,6 +19,13 @@ $sans-p:Source Sans Pro;
     justify-content: space-between;
 }
 
+.title-flourish{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
 
 @import "partials/_setup.scss";
 
@@ -32,6 +40,10 @@ $sans-p:Source Sans Pro;
 
 img{
     max-width:100%;
+}
+.outer-wrapper{
+    max-width: 1920px;
+    margin: 0 auto;
 }
 .wrapper{
     max-width: 1170px;
