--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,6 +2,8 @@
 $primary: #2f87fd; //Skyblue
 $accent: #78aef8; //Paisley
 $block: #1f2329; //Cobalt 
+$dark-accent: #313030; //Gunmetal
+$medium-accent:#424141;//Mid Grey
 $bg-color: #f5f5f5; //Offwhite
 
 //TEXT
