--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -11,10 +11,14 @@
     .contact-info-phone,
     .contact-info-mail{
         @extend .flex;
-        align-items: center;
+        align-items: center;  
+    }
+    .contact-info-phone{
+        flex-basis: 35%;
     }
     .contact-info-img{
         flex-basis: 23%;
+        margin-right: 10px;
     }
 }
 .accounts{
@@ -48,7 +52,8 @@ select{
         @extend .flex;
     }
     .company-info-img{
-            width: 30px;
+        width: 30px;
+        margin-right: 10px;
     }
     .company-info-logo{
         @extend .flex;
@@ -98,15 +103,7 @@ select{
 }
 .banner{
     position: relative;
-    .overlay{
-        position: absolute;
-        top:0;
-        bottom: 0;
-        right:0;
-        left: 0;
-        background: rgba(1, 22, 50, 0.45);
-    }
-    background: url(../images/photos/paul-bence-395888.png) no-repeat;
+    background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.4) ),  url(../images/photos/paul-bence-395888.png) no-repeat;
     background-size: cover;
     height: 650px;
     background-position: center;
@@ -117,4 +114,49 @@ select{
     .banner-content{
         width: 70%;
     }
+    .banner-nav{
+        @extend .flex;
+        justify-content: space-between;
+        position: absolute;
+        width: 100%;
+        .arrow{
+            height: 59px;
+            width: 59px;
+            background: rgba(255,255,255,0.2);
+            border-radius: 90px;
+            @extend .flex;
+            justify-content: center;
+            transition: all 0.5s;
+        }
+        .arrow:hover{
+            background: rgba(0, 0, 0, 0.7);
+        }
+        .arrow:hover i{
+            color: $primary;
+        }
+    }
+    // .wrapper::before{
+    //     content: "<";
+    //     display: block;
+    //     text-align: center;
+    //     position: absolute;
+    //     width: 50px;
+    //     height: 50px;
+    //     color: black;
+    //     background: rgba(255,255,255,0.4);
+    //     border-radius: 90px;
+    //     // left: 50px;
+    // }
+    // .wrapper::after{
+    //     content: ">";
+    //     display: block;
+    //     text-align: center;
+    //     position: absolute;
+    //     width: 50px;
+    //     height: 50px;
+    //     color: black;
+    //     background: rgba(255,255,255,0.4);
+    //     border-radius: 90px;
+    //     // left: 50px;
+    // }
 }
