--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,5 +1,6 @@
 .half{
     @extend .flex;
+    margin-bottom: 20px;
 }
 .third{
     width: 32%;
@@ -84,7 +85,6 @@
 }
 .services-title{
     @extend .title-flourish;
-    padding: 15px;
     h3, h2{
         z-index: 2;
     }
@@ -155,8 +155,8 @@
     }
 }
 .credentials{
-    background: $block;
     margin: 30px 0;
+    background: $block;
     .outer-wrapper{
         @extend .flex;
         justify-content: space-around; 
@@ -200,8 +200,20 @@
     }
     .news-details{
         @extend .flex;
+        margin-bottom: 80px;
         h3{
             flex-basis: 85%;
+        }
+        button{
+            @extend .transparent;
+        }
+    }
+    .news-article{
+        .news-img{
+            margin-bottom: 30px;
+        }
+        h3{
+            margin-bottom: 20px;
         }
     }
 }
@@ -209,6 +221,6 @@
      background: $primary;
     .wrapper{
         @extend .flex;
-        padding: 10px;
-    }  
+        padding: 30px;
+    } 
 }
